# konstruktor

./: .gitignore  CMakeLists.txt  README.md  configuration.yaml  options.xml  vcpkg.json
include/: axes3d.h  camera.h  exceptions.h  joints.h  optionsreader.h  render_object.h  shaders.h  stl_parser.h  texture.h  window.h
shaders/: fovs.frag  fovs.vert  freetype.frag  freetype.vert  texture.frag  texture.vert
src/: CMakeLists.txt  main.cpp  optionsreader.cpp  shaders.cpp  stl_parser.cpp  texture.cpp
tests/: CMakeLists.txt  test_main.cpp
